--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -2,9 +2,25 @@
   "name": "realitychain-webapp",
   "version": "1.0.0",
   "description": "Reality Chain frontend",
-  "main": "index.js",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
+    "eslint-visitor-keys": "^3.3.0",
+    "near-api-js": "~0.43.1",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^2.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -25,5 +41,22 @@
   "bugs": {
     "url": "https://github.com/realitychainio/realitychain-monorepo/issues"
   },
-  "homepage": "https://github.com/realitychainio/realitychain-monorepo#readme"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
