--- a/packages/realitychain-sdk-js/package.json
+++ b/packages/realitychain-sdk-js/package.json
@@ -8,7 +8,16 @@
     "lib/**/*"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "check": "npm run test:unit && npm run format && npm run lint && npm run build",
+    "format": "prettier --write \"(src|example|test)/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint && npm run build",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags",
+    "test": "jest --config ./test/unit/jest-unit.json"
   },
   "repository": {
     "type": "git",
@@ -34,6 +43,15 @@
     "near-api-js": "^0.45.1"
   },
   "devDependencies": {
-    "@types/node": "^18.0.3"
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
+    "babel-jest": "^28.1.2",
+    "jest": "^28.1.2",
+    "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
+    "ts-jest": "^28.0.5",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.5.5"
   }
 }
