--- a/packages/realitychain-sdk-js/package.json
+++ b/packages/realitychain-sdk-js/package.json
@@ -17,7 +17,7 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "test": "jest --config ./test/unit/jest-unit.json"
+    "test": "jest --config ./test/jest.json"
   },
   "repository": {
     "type": "git",
@@ -53,5 +53,8 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.5"
+  },
+  "directories": {
+    "test": "test"
   }
 }
