--- a/packages/realitychain-sdk-js/package.json
+++ b/packages/realitychain-sdk-js/package.json
@@ -9,13 +9,13 @@
   ],
   "scripts": {
     "build": "tsc",
-    "check": "npm run test:unit && npm run format && npm run lint && npm run build",
+    "check": "yarn test:unit && yarn format && yarn lint && yarn build",
     "format": "prettier --write \"(src|example|test)/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint && npm run build",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "prepare": "yarn build",
+    "prepublishOnly": "npm test && yarn lint && yarn build",
+    "preversion": "yarn lint",
+    "version": "yarn format && git add -A src",
     "postversion": "git push && git push --tags",
     "test": "jest --config ./test/jest.json"
   },
