--- a/package.json
+++ b/package.json
@@ -1,9 +1,42 @@
-
 {
-  "name": "@realitychain/monorepo",
+  "name": "root",
   "private": true,
+  "scripts": {
+    "lerna": "lerna",
+    "build": "lerna run build --scope=@realitychain/{erc20,sdk,webapp}",
+    "test": "lerna run --parallel test",
+    "clean": "lerna run --parallel clean",
+    "prepare": "lerna run prepare --scope=@realitychain/{erc20,sdk,webapp}",
+    "lint": "eslint 'packages/**/*.ts' --fix",
+    "format": "prettier --write 'packages/**/*.{ts(x)?,sol,md,css,json}' '!**/typechain/**'"
+  },
+  "resolutions": {
+    "**/ethers": "^5.6.8",
+    "**/@ethersproject/contracts": "^5.6.2"
+  },
   "devDependencies": {
     "lerna": "^5.1.4",
-    "nx": "^14.4.1"
+    "tslint-config-prettier": "^1.18.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "prettier": "^2.5.1",
+    "ts-jest": "^28.0.5",
+    "tslint": "^6.1.3",
+    "@types/jest": "^28.1.4",
+    "typescript": "^4.5.5",
+    "husky": "^8.0.1"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "yarn lint",
+      "yarn format"
+    ]
   }
 }
