--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -38,7 +38,7 @@
     "metaverse"
   ],
   "author": "Imam Hermawan",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/realitychainio/realitychain-monorepo/issues"
   },
