--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "babel-jest": "^28.1.2",
     "bootstrap": "^5.1.3",
     "eslint-visitor-keys": "^3.3.0",
     "near-api-js": "~0.43.1",
@@ -19,7 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
+    "prepare": "yarn build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
