--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -6,15 +6,16 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "^14.2.1",
     "babel-jest": "^28.1.2",
     "bootstrap": "^5.1.3",
     "eslint-visitor-keys": "^3.3.0",
-    "near-api-js": "~0.43.1",
+    "near-api-js": "~0.45.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
