--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -4,6 +4,7 @@
   "description": "Reality Chain frontend",
   "private": true,
   "dependencies": {
+    "@realitychain/sdk": "*",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.2.1",
