--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "lerna": "lerna",
     "build": "lerna run --parallel build",
-    "test": "lerna run --parallel test --scope=@realitychain/{near-nft,erc20,sdk}",
     "prepare": "lerna run --parallel prepare",
     "lint": "lerna run --parallel lint --scope=@realitychain/{near-nft,erc20,sdk}",
-    "format": "lerna run --parallel format --scope=@realitychain/{near-nft,erc20,sdk}"
+    "format": "lerna run --parallel format --scope=@realitychain/{near-nft,erc20,sdk}",
+    "start": "yarn workspace @realitychain/webapp start",
+    "test": "lerna run --parallel test --scope=@realitychain/{near-nft,erc20,sdk}"
   },
   "resolutions": {
     "**/ethers": "^5.6.8",
