refactor: rename folder to nft parcels

--- a/packages/realitychain-contracts/nft-parcels/Cargo.toml
+++ b/packages/realitychain-contracts/nft-parcels/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nft-contract"
+name = "nft-parcels"
 version = "0.1.0"
 authors = ["Theo <agustinustheoo@gmail.com>"]
 edition = "2021"
