refactor: lerna using yarn and workspaces

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,7 @@
     "packages/*",
     "packages/realitychain-contracts/*"
   ],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "1.0.0"
 }
