--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "scripts": {
     "lerna": "lerna",
-    "build": "lerna run build",
-    "prepare": "lerna run prepare",
-    "lint": "lerna run --parallel lint --scope=@realitychain/{nft-parcels,nft-vouchers,erc20,sdk}",
-    "format": "lerna run --parallel format --scope=@realitychain/{nft-parcels,nft-vouchers,erc20,sdk}",
+    "build": "lerna run build --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
+    "prepare": "lerna run prepare --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
+    "lint": "lerna run --parallel lint --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
+    "format": "lerna run --parallel format --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
     "start": "yarn workspace @realitychain/webapp start",
-    "test": "lerna run --parallel test --scope=@realitychain/{nft-parcels,nft-vouchers,erc20,sdk}"
+    "test": "lerna run --parallel test --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}"
   },
   "resolutions": {
     "**/ethers": "^5.6.8",
