--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "lerna run --parallel lint --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
     "format": "lerna run --parallel format --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}",
     "start": "yarn workspace @realitychain/webapp start",
-    "test": "lerna run --parallel test --scope=@realitychain/{nft-parcels,erc20,sdk,nft-vouchers}"
+    "test": "lerna run --parallel test --scope=@realitychain/{nft-parcels,erc20,nft-vouchers}"
   },
   "resolutions": {
     "**/ethers": "^5.6.8",
