--- a/packages/realitychain-webapp/package.json
+++ b/packages/realitychain-webapp/package.json
@@ -4,7 +4,12 @@
   "description": "Reality Chain frontend",
   "private": true,
   "dependencies": {
+    "@fontsource/montserrat": "^4.5.11",
     "@realitychain/sdk": "0.0.1-beta.0",
+    "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.2.1",
